--- a/submissionii.Rmd
+++ b/submissionii.Rmd
@@ -13,11 +13,11 @@ knitr::opts_chunk$set(echo = FALSE, warning = FALSE, message = FALSE)
 
 ## I. Introduction
 
-|        On May 25, 2020, George Floyd was publicly suffocated to death by police officers in Minneapolis, Minnesota. This, along with the murder of Breonna Taylor by Louisville police, incited waves of protests against police brutality across the United States and increased the spread of Black Lives Matter content on social media. The recent boost in attention to the Black Lives Matter movement has once again brought to light the issue of racism in America and its link to police brutality, and more specifically, police use of deadly force. Several studies have already found that race does play a part in who is targeted and killed in police shootings. For example, in a recent VICE News investigation about police shootings, it was found that “Black people were shot more often and at higher rates than people of any other race.” [1] Additionally, Edwards et. al performed a study regarding the effects of age, race-ethnicity, and sex on the risk of being killed by lethal force by law enforcement and similarly found that "Black men are about 2.5 times more likely to be killed by police over the life course than are white men" while "Black women are about 1.4 times more likely to be killed by police than are white women." [2] However, even with these studies and their disturbing conclusions, a poll done by AP-NORC in June 2020 found that still 39% of Americans think that police are not more likely to use lethal force against a black person than a white person. [3] Although this has decreased from an overwhelming 51% in June 2015, there is still a great deal of research that needs to be done in this area to provide even more statistical evidence backing the relationship between racism and police use of deadly force. 
-|        As a result, I have decided to build off of VICE News’ study and investigate data on police shootings further to understand the roles that race of both victim and officer, as well as other factors such as their genders and whether they are carrying a weapon, play in fatal versus non-fatal police shootings. Additionally, to add predictors relating to location, I will be using data found on Kaggle detailing the gun provisions that are upheld by each state see how gun legislation affects lethal vs. non-lethal shootings. I will also add a predictor indicating whether the state in which the homicide occurred requires de-escalation training for police officers. Finally, RACE DEMOGRAPHICS SOMEHOW. This will allow me to better understand how racism has manifested itself in America’s police system and determine whether current attempts to prevent police use of lethal force are effective or not.
+|        On May 25, 2020, George Floyd was publicly suffocated to death by police officers in Minneapolis, Minnesota. This, along with the murder of Breonna Taylor by Louisville police, incited waves of protests against police brutality across the United States and increased the spread of Black Lives Matter content on social media. The recent boost in attention to the Black Lives Matter movement has once again brought to light the issue of racism in America and its link to police brutality, and more specifically, police use of deadly force. Several studies have already found that race does play a part in who is targeted and killed in police shootings. For example, in a recent VICE News investigation about police shootings, it was found that “Black people were shot more often and at higher rates than people of any other race.” [1] Additionally, Edwards et. al performed a study regarding the effects of age, race-ethnicity, and sex on the risk of being killed by lethal force by law enforcement and similarly found that "Black men are about 2.5 times more likely to be killed by police over the life course than are white men" while "Black women are about 1.4 times more likely to be killed by police than are white women." [2] However, even with these studies and their disturbing conclusions, a poll done by AP-NORC in June 2020 found that still 39% of Americans think that police are not more likely to use lethal force against a black person than a white person. [3] Although this has decreased from an overwhelming 51% in June 2015, there is still a great deal of research that needs to be done in this area to provide more statistical evidence backing the relationship between racism and police use of deadly force. 
+|        As a result, I have decided to build off of VICE News’ study and investigate data on police shootings further to understand the roles that the race of both victim and officer, as well as other factors such as their genders and whether they are carrying a weapon, play in fatal versus non-fatal police shootings. Additionally, to account for the varying locations of the homicides, I will be using data found on Kaggle detailing the gun provisions that are upheld by each state see how gun legislation affects lethal vs. non-lethal shootings. I will also add a predictor indicating whether the state in which the homicide occurred requires de-escalation training for police officers. Finally, I will explore how the ratio of black to white population in each location relates to police use of deadly force. This will allow me to better understand how racism has manifested itself in America’s police system and determine whether current attempts to prevent police use of lethal force are effective or not.
 
 ### Data
-|        To effectively build off of the study done by VICE News, I will be using the same dataset that they used. This dataset contains data on officer-involved shootings from 47 of the largest local police departments in America, and more specifically, “information on 4,117 incidents and 4,400 subjects over seven years.” [1] The predictors that I will use are subject (victim) race, subject gender, officer race, officer gender, and the type of weapon the subject was carrying. The response I will be modeling will be whether the shooting was fatal or not. I will be filtering out the cases in which fatality is unknown or the subject’s or the officer’s race or gender is unknown from the final dataset. Additionally, there are 265 rows in which there were more than one victims of the shooting; in these cases, I will be separating each of these observations into multiple rows, with each row representing each individual victim and their associated information. I will carry out the same procedure in the cases in which there were more than one officers present at the shooting. Because there can be multiple victims and officers recorded for a shooting event, I will also be filtering out cases in which for a shooting event, the number of observations listed for victim or officer race differs from the number of observations listed for victim or officer gender, since I can not infer the missing values in either of these columns.
+|        As a basis for this study, I will be using the same dataset that VICE News used. This dataset contains data on officer-involved shootings from 47 of the largest local police departments in America, and more specifically, “information on 4,117 incidents and 4,400 subjects over seven years.” [1] The predictors that I will use are subject (victim) race, subject gender, officer race, officer gender, and the type of weapon the subject was carrying. The response I will be modeling will be whether the shooting was fatal or not. I will be filtering out the cases in which fatality is unknown or the subject’s or the officer’s race or gender is unknown from the final dataset. Additionally, there are 265 rows in which there were more than one victims of the shooting; in these cases, I will be separating each of these observations into multiple rows, with each row representing each individual victim and their associated information. I will carry out the same procedure in the cases in which there were more than one officers present at the shooting. Because there can be multiple victims and officers recorded for a shooting event, I will also be filtering out cases in which for a shooting event, the number of observations listed for victim or officer race differs from the number of observations listed for victim or officer gender, since I can not infer the missing values in either of these columns.
 
 |        After cleaning the data, I was left with a total of 3,451 observations. I plotted some visualizations that depict the overall trends of the different predictors that I plan to use to answer my proposed research questions. 	
 
@@ -31,10 +31,10 @@ library(tidyverse)
 ```
 
 ```{r load-data}
-all <- read.csv("allshootingsdata.csv")
-
-philly <- read.csv("philly_shootings.csv")
-cincinnati <- read.csv("cincinnati_shootings.csv")
+all <- read.csv("data/allshootingsdata.csv")
+census <- read.csv("data/2013census.csv")[,-c(8,9)]
+gun_provisions <- read.csv("data/gun_provisions.csv") %>% 
+  filter(year == 2013)
 ```
 
 ```{r clean-all}
