--- a/police_eda.Rmd
+++ b/police_eda.Rmd
@@ -17,18 +17,45 @@ library(tidyverse)
 
 
 ## Load Data
-```{r load-data}
-all <- read.csv("allshootingsdata.csv")
 
-philly <- read.csv("philly_shootings.csv")
-cincinnati <- read.csv("cincinnati_shootings.csv")
+```{r}
+library(ggplot2)
+library(dplyr)
+library(tidyr)
+library(tidyverse)
 ```
 
-## Exploratory Data Analysis 
+```{r load-data}
+# Shootings
+all <- read.csv("data/allshootingsdata.csv")
+
+# Census Predictors
+census <- read.csv("data/2013census.csv")[,-c(8,9)]
+states <- lapply(census$department, function(x) str_extract_all(x,"\\([^()]+\\)")[[1]])
+states <- substring(states, 2, nchar(states)-1)
+census$state <- states
+
+# Gun Law Predictors
+gun_provisions <- read.csv("data/gun_provisions.csv") %>% 
+  filter(year == 2013)
+gun_provisions <- gun_provisions %>% 
+  mutate(total_pr = rowSums(gun_provisions[,3:136]),
+         deesc_train = ifelse(state %in% c("California", "New Mexico", "Texas", "Oklahoma", "South Dakota", "Illinois", "Indiana", "Tennessee", "Washington", "Missouri", "Georgia", "Ohio", "Maryland", "Massachusetts", "Connecticut", "Maine"), 1, 0)) %>% 
+  select(state, total_pr, deesc_train)
+gun_provisions$state <- state.abb[match(gun_provisions$state,state.name)]
+```
 
 ```{r clean-all}
 all <- all %>% 
-  select(-c("Date", "NatureOfStop", "Notes", "SubjectAge", "NumberOfShots", "Department", "FullNarrative", "fdate", "month", "day", "b", "l", "w", "a", "tr", "AvgAge", "VA", "F", "nshots", "sit"))
+  select(-c("Date", "NatureOfStop", "Notes", "SubjectAge", "NumberOfShots", "Department", "FullNarrative", "fdate", "month", "day", "tr", "AvgAge", "VA", "F", "nshots", "sit")) %>% 
+  mutate(other = as.numeric(other), 
+         replica = as.numeric(replica), 
+         knife = as.numeric(knife), 
+         gun = as.numeric(weapon == "gun"), 
+         unarmed = as.numeric(weapon == "unarmed"),
+         unknown_weapon = as.numeric(weapon == "U"),
+         id = paste0("C", row_number())) %>% 
+  select(-weapon)
 
 all <- all %>% 
   separate_rows(SubjectRace, SubjectGender, Fatal, sep = ";")
@@ -71,6 +98,28 @@ all$OfficerRace[all$OfficerRace == "ASIAN"] <- "A"
 all$OfficerGender[all$OfficerGender == "FEMALE"] <- "F"
 all$OfficerGender[all$OfficerGender == "MALE"] <- "M"
 all$OfficerGender[all$OfficerGender == "Male"] <- "M"
+```
+
+```{r split_data}
+single_victims <- all %>% 
+  filter(!str_detect(SubjectRace, ";"))
+
+mult_victims <- all %>% 
+  filter(str_detect(SubjectRace, ";"))
+```
+
+## Exploratory Data Analysis 
+
+```{r}
+temp <- single_victims %>% 
+  group_by(Fatal, SubjectRace) %>% 
+  summarise(count = n())
+  
+ggplot(single_victims, aes(x = Fatal, y = count)) +
+  geom_bar(stat="identity") + 
+  labs(x = "Fatal", y = "Count", title = "Counts for Fatal vs. Non-Fatal Police Shootings") 
+  group_by(Fatal, race) %>% 
+  summarise(count = n())
 ```
 
 ```{r fatal-eda}
@@ -127,68 +176,5 @@ temp <- all %>%
 ggplot(temp, aes(x=weapon, y=count, fill = Fatal)) + 
   geom_bar(position="dodge", stat="identity") + 
   labs(x = "Weapon Type", y = "Count", title = "Counts of Each Weapon Type on Victims by Fatal vs. Non-Fatal in Police Shootings") 
-```
-
-
-```{r clean-cities}
-cinn <- cincinnati %>% 
-  select(RACE, SEX, TYPE) %>% 
-  rename(race = RACE, gender = SEX, fatal = TYPE) %>% 
-  mutate(city = "Cincinnati")
-
-phil <- philly %>% 
-  select(race, sex, fatal) %>% 
-  rename(gender = sex) %>% 
-  mutate(city = "Philadelphia")
-
-comp <- rbind(cinn, phil) 
-
-comp <- comp %>%
-  filter(race != "UNKNOWN") %>% 
-  filter (race != "") %>% 
-  filter(race != "UNK") %>% 
-  filter(gender != "")
-
-comp$race[comp$race == "WHITE"] <- "W"
-comp$race[comp$race == "BLACK"] <- "B"
-comp$race[comp$race == "OTHER"] <- "O"
-comp$race[comp$race == "HISPANIC"] <- "H"
-
-comp$gender[comp$gender == "MALE"] <- "M"
-comp$gender[comp$gender == "FEMALE"] <- "F"
-
-comp$fatal[comp$fatal == "0"] <- "N"
-comp$fatal[comp$fatal == "1"] <- "F"
-comp$fatal[comp$fatal == "NONFATAL"] <- "N"
-comp$fatal[comp$fatal == "FATAL"] <- "F"
-```
-
-```{r fatal-eda}
-temp <- comp %>% 
-  group_by(fatal) %>% 
-  summarise(count = n())
-
-ggplot(temp, aes(x=fatal, y=count)) + 
-  geom_bar(stat="identity") + 
-  labs(x = "Fatal", y = "Count", title = "Counts for Fatal vs. Non-Fatal Police Shootings") 
-```
-```{r race-eda-cities}
-temp <- comp %>% 
-  group_by(fatal, race) %>% 
-  summarise(count = n())
-
-ggplot(temp, aes(x=race, y=count, fill = fatal)) + 
-  geom_bar(position="dodge", stat="identity") + 
-  labs(x = "Race", y = "Count", title = "Counts for Victim Race by Fatal vs. Non-Fatal in All Shootings") 
-```
-
-```{r gender-eda-cities}
-temp <- comp %>% 
-  group_by(fatal, gender) %>% 
-  summarise(count = n())
-
-ggplot(temp, aes(x=gender, y=count, fill = fatal)) + 
-  geom_bar(position="dodge", stat="identity") + 
-  labs(x = "Gender", y = "Count", title = "Counts for Victim Gender by Fatal vs. Non-Fatal in All Shootings") 
 ```
 
