--- a/submissionii.Rmd
+++ b/submissionii.Rmd
@@ -39,9 +39,33 @@ gun_provisions$state <- state.abb[match(gun_provisions$state,state.name)]
 ```
 
 ```{r clean-all}
+all$OfficerRace <- gsub("H/L", "L", all$OfficerRace)
+all$OfficerRace <- gsub("H", "L", all$OfficerRace)
+all$OfficerRace <- gsub("Unknown", "U", all$OfficerRace)
+all$OfficerRace <- gsub("m/m", "U", all$OfficerRace)
+all$OfficerRace <- gsub("WHITE", "W", all$OfficerRace)
+all$OfficerRace <- gsub("WLITE", "W", all$OfficerRace)
+all$OfficerRace <- gsub("BLACK", "B", all$OfficerRace)
+all$OfficerRace <- gsub("ASIAN", "A", all$OfficerRace)
+all$OfficerRace <- gsub("Other", "O", all$OfficerRace)
+all$OfficerRace <- gsub("AI/AN", "O", all$OfficerRace)
+all$OfficerRace <- gsub("A/PI ", "A;", all$OfficerRace)
+all$OfficerRace <- gsub("A/PI", "A", all$OfficerRace)
+all$OfficerRace <- gsub("Multi-Racial", "O", all$OfficerRace)
+all$OfficerRace <- gsub(",", ";", all$OfficerRace)
+all$OfficerRace <- gsub(" ", "", all$OfficerRace)
+all$OfficerRace <- gsub("A/W", "O", all$OfficerRace)
+all$OfficerRace <- gsub("NA/W", "O", all$OfficerRace)
+all$OfficerRace <- gsub("W/L", "O", all$OfficerRace)
+all$OfficerRace <- gsub("W/A", "O", all$OfficerRace)
+
 all <- all %>% 
   select(-c("Date", "NatureOfStop", "Notes", "SubjectAge", "NumberOfShots", "Department", "FullNarrative", "fdate", "month", "day", "tr", "AvgAge", "VA", "F", "nshots", "sit")) %>% 
-  mutate(other = as.numeric(other), 
+  mutate(b = as.numeric(b > 0),
+         w = as.numeric(w > 0),
+         l = as.numeric(l > 0),
+         a = as.numeric(a > 0),
+         other = as.numeric(other), 
          replica = as.numeric(replica), 
          knife = as.numeric(knife), 
          gun = as.numeric(weapon == "gun"), 
@@ -49,6 +73,13 @@ all <- all %>%
          unknown_weapon = as.numeric(weapon == "U"),
          id = paste0("C", row_number())) %>% 
   select(-weapon)
+
+all <- rename(all, sb = b, sl = l, sw = w, sa = a)
+
+all$ob <- as.numeric(str_count(all$OfficerRace, "B") > 0)
+all$ow <- as.numeric(str_count(all$OfficerRace, "W") > 0)
+all$ol <- as.numeric(str_count(all$OfficerRace, "L") > 0)
+all$oa <- as.numeric(str_count(all$OfficerRace, "A") > 0)
 
 all <- all %>% 
   separate_rows(SubjectRace, SubjectGender, Fatal, sep = ";")
@@ -97,7 +128,7 @@ all$OfficerGender[all$OfficerGender == "Male"] <- "M"
 
 |        On May 25, 2020, George Floyd was publicly suffocated to death by police officers in Minneapolis, Minnesota. This, along with the murder of Breonna Taylor by Louisville police, incited waves of protests against police brutality across the United States and increased the spread of Black Lives Matter content on social media. The recent boost in attention to the Black Lives Matter movement has once again brought to light the issue of racism in America and its link to police brutality, and more specifically, police use of deadly force. Several studies have already found that race does play a part in who is targeted and killed in police shootings. For example, in a recent VICE News investigation about police shootings, it was found that “Black people were shot more often and at higher rates than people of any other race.” [1] Additionally, Edwards et. al performed a study regarding the effects of age, race-ethnicity, and sex on the risk of being killed by lethal force by law enforcement and similarly found that "Black men are about 2.5 times more likely to be killed by police over the life course than are white men" while "Black women are about 1.4 times more likely to be killed by police than are white women." [2] However, even with these studies and their disturbing conclusions, a poll done by AP-NORC in June 2020 found that still 39% of Americans think that police are not more likely to use lethal force against a black person than a white person. [3] Although this has decreased from an overwhelming 51% in June 2015, there is still a great deal of research that needs to be done in this area to provide more statistical evidence backing the relationship between racism and police use of deadly force. 
 
-|        As a result, I have decided to build off of VICE News’ study and investigate data on police shootings further to understand the roles that the race of both victim and officer, as well as other factors such as their genders and whether they are carrying a weapon, play in fatal versus non-fatal police shootings. Additionally, to account for the varying locations of the homicides, I will be using a dataset found on Kaggle detailing the gun provisions that are upheld by each state see how gun legislation affects lethal vs. non-lethal shootings. I will also add a predictor indicating whether the state in which the homicide occurred requires de-escalation training for police officers. Finally, I will explore how the ratio of black to white population in each location relates to police use of deadly force. This will allow me to better understand how racism has manifested itself in America’s police system and determine whether current attempts to prevent police use of lethal force are effective or not.
+|        As a result, I have decided to build off of VICE News’ study and investigate data on police shootings further to understand the roles that the race of both victim and officer, as well as other factors such as their genders, whether they are carrying a weapon, and the total number of victims in the crime, play in fatal versus non-fatal police shootings. Additionally, to account for the varying locations of the homicides, I will be using a dataset found on Kaggle detailing the gun provisions that are upheld by each state see how gun legislation affects lethal vs. non-lethal shootings. I will also add a predictor indicating whether the state in which the homicide occurred requires de-escalation training for police officers. Finally, I will explore how the ratio of black to white population in each location relates to police use of deadly force. This will allow me to better understand how racism has manifested itself in America’s police system and determine whether current attempts to prevent police use of lethal force are effective or not.
 
 ### Data
 
@@ -105,9 +136,38 @@ all$OfficerGender[all$OfficerGender == "Male"] <- "M"
 
 |       Additionally, to assess the effect of different types of legislation on fatal vs. non-fatal police shootings in various states, I will be using a dataset from Kaggle containing 135 variables that detail whether a certain gun provision is absent or present in a certain year and U.S. state for 133 different gun provisions. The years range from 1991 to 2017, and the gun provisions address 14 categories, some of which are dealer regulations, buyer regulations, prohibitions for high-risk gun possession, background checks, ammunition regulations, possession regulations, concealed carry permitting, assault weapons and large-capacity magazines, child access prevention, gun trafficking, and domestic violence. A 1 in the gun provision column represents a presence of the law, and a 0 indicates an absence. I also will add a column to this gun provision dataset indicating whether a state requires de-escalation training based off of information reported by APM Report in 2017, with a 1 meaning the state does require training and a 0 meaning the state does not.[4] 
 
-|       Finally, to examine city demographics as a predictor, I will be using population data from the 2013 American Community Survey that VICE News had already cleaned and standardized to the shootings dataset, meaning the city names can be matched up between the two datasets. VICE News most likely provided ony 2013 census data because it is the average year of all the years represented in the shootings dataset. The census data includes 7 variables: the police department and the city it's located in, as well as the city's black, asian, hispanic, white, and overall total population in 2013. 
+|       Finally, to examine city demographics as a predictor, I will be using population data from the 2013 American Community Survey that VICE News had already cleaned and standardized to the shootings dataset, meaning the city names can be matched up between the two datasets. VICE News most likely provided only 2013 census data because it is the average year of all the years represented in the shootings dataset. The census data includes 7 variables: the police department and the city it's located in, as well as the city's Black, Asian, Hispanic, White, and overall total population in 2013. 
 
 ### Exploratory Data Analysis
+
+```{r}
+single_victims <- all %>% 
+  filter(!str_detect(SubjectRace, ";"))
+nrow(single_victims)
+
+mult_victims <- all %>% 
+  filter(str_detect(SubjectRace, ";"))
+nrow(mult_victims)
+
+unknown <- all %>% 
+  filter(str_detect(SubjectRace, "U"))
+```
+|       Upon first glance, there appears to be 3906 incidents in which there was only one victim, and 210 with multiple victims. This means that there is one incident in which the victim race was marked as "NA." Additionally, 
+
+```{r}
+single_victims <- all %>% 
+  filter(!str_detect(SubjectRace, ";"))
+
+mult_victims <- all %>% 
+  filter(str_detect(SubjectRace, ";"))
+
+ggplot(single_victims, aes(x = Fatal, y = count)) +
+  geom_bar(stat="identity") + 
+  labs(x = "Fatal", y = "Count", title = "Counts for Fatal vs. Non-Fatal Police Shootings") 
+  group_by(Fatal, race) %>% 
+  summarise(count = n())
+```
+
 
 ```{r fatal-eda2}
 temp <- all %>% 
