--- a/submissionii.Rmd
+++ b/submissionii.Rmd
@@ -19,9 +19,6 @@ library(tidyverse)
 ```
 
 ```{r load-data}
-# Shootings
-all <- read.csv("data/allshootingsdata.csv")
-
 # Census Predictors
 census <- read.csv("data/2013census.csv")[,-c(8,9)]
 states <- lapply(census$department, function(x) str_extract_all(x,"\\([^()]+\\)")[[1]])
@@ -36,28 +33,33 @@ gun_provisions <- gun_provisions %>%
          deesc_train = ifelse(state %in% c("California", "New Mexico", "Texas", "Oklahoma", "South Dakota", "Illinois", "Indiana", "Tennessee", "Washington", "Missouri", "Georgia", "Ohio", "Maryland", "Massachusetts", "Connecticut", "Maine"), 1, 0)) %>% 
   select(state, total_pr, deesc_train)
 gun_provisions$state <- state.abb[match(gun_provisions$state,state.name)]
+
+# Shootings
+all <- read.csv("data/allshootingsdata.csv")
 ```
 
 ```{r clean-all}
+# Recode officer races
 all$OfficerRace <- gsub("H/L", "L", all$OfficerRace)
 all$OfficerRace <- gsub("H", "L", all$OfficerRace)
-all$OfficerRace <- gsub("Unknown", "U", all$OfficerRace)
-all$OfficerRace <- gsub("m/m", "U", all$OfficerRace)
-all$OfficerRace <- gsub("WHITE", "W", all$OfficerRace)
-all$OfficerRace <- gsub("WLITE", "W", all$OfficerRace)
+all$OfficerRace <- gsub("Unknown|m/m", "U", all$OfficerRace)
+all$OfficerRace <- gsub("WHITE|WLITE", "W", all$OfficerRace)
 all$OfficerRace <- gsub("BLACK", "B", all$OfficerRace)
 all$OfficerRace <- gsub("ASIAN", "A", all$OfficerRace)
-all$OfficerRace <- gsub("Other", "O", all$OfficerRace)
-all$OfficerRace <- gsub("AI/AN", "O", all$OfficerRace)
+all$OfficerRace <- gsub("Other|AI/AN|NA/W|Multi-Racial", "O", all$OfficerRace)
 all$OfficerRace <- gsub("A/PI ", "A;", all$OfficerRace)
 all$OfficerRace <- gsub("A/PI", "A", all$OfficerRace)
-all$OfficerRace <- gsub("Multi-Racial", "O", all$OfficerRace)
 all$OfficerRace <- gsub(",", ";", all$OfficerRace)
 all$OfficerRace <- gsub(" ", "", all$OfficerRace)
-all$OfficerRace <- gsub("A/W", "O", all$OfficerRace)
-all$OfficerRace <- gsub("NA/W", "O", all$OfficerRace)
-all$OfficerRace <- gsub("W/L", "O", all$OfficerRace)
-all$OfficerRace <- gsub("W/A", "O", all$OfficerRace)
+all$OfficerRace <- gsub("A/W|W/L|W/A", "O", all$OfficerRace)
+all$OfficerRace[all$OfficerRace == ""] <- "U"
+
+# Recode officer genders
+all$OfficerGender <- gsub("MALE", "M", toupper(all$OfficerGender))
+all$OfficerGender <- gsub("FEMALE|FEM", "F", toupper(all$OfficerGender))
+all$OfficerGender <- gsub("UNKNOWN|FALSE", "U", toupper(all$OfficerGender))
+all$OfficerGender <- gsub(",|:", ";", toupper(all$OfficerGender))
+all$OfficerGender <- gsub(" |/", "", toupper(all$OfficerGender))
 
 all <- all %>% 
   select(-c("Date", "NatureOfStop", "Notes", "SubjectAge", "NumberOfShots", "Department", "FullNarrative", "fdate", "month", "day", "tr", "AvgAge", "VA", "F", "nshots", "sit")) %>% 
@@ -65,6 +67,10 @@ all <- all %>%
          w = as.numeric(w > 0),
          l = as.numeric(l > 0),
          a = as.numeric(a > 0),
+         ob = as.numeric(str_count(all$OfficerRace, "B") > 0),
+         ow = as.numeric(str_count(all$OfficerRace, "W") > 0),
+         ol = as.numeric(str_count(all$OfficerRace, "L") > 0),
+         oa = as.numeric(str_count(all$OfficerRace, "A") > 0),
          other = as.numeric(other), 
          replica = as.numeric(replica), 
          knife = as.numeric(knife), 
@@ -72,14 +78,9 @@ all <- all %>%
          unarmed = as.numeric(weapon == "unarmed"),
          unknown_weapon = as.numeric(weapon == "U"),
          id = paste0("C", row_number())) %>% 
-  select(-weapon)
+  select(-c(weapon))
 
 all <- rename(all, sb = b, sl = l, sw = w, sa = a)
-
-all$ob <- as.numeric(str_count(all$OfficerRace, "B") > 0)
-all$ow <- as.numeric(str_count(all$OfficerRace, "W") > 0)
-all$ol <- as.numeric(str_count(all$OfficerRace, "L") > 0)
-all$oa <- as.numeric(str_count(all$OfficerRace, "A") > 0)
 
 all <- all %>% 
   separate_rows(SubjectRace, SubjectGender, Fatal, sep = ";")
@@ -126,35 +127,48 @@ all$OfficerGender[all$OfficerGender == "Male"] <- "M"
 
 ## I. Introduction
 
-|        On May 25, 2020, George Floyd was publicly suffocated to death by police officers in Minneapolis, Minnesota. This, along with the murder of Breonna Taylor by Louisville police, incited waves of protests against police brutality across the United States and increased the spread of Black Lives Matter content on social media. The recent boost in attention to the Black Lives Matter movement has once again brought to light the issue of racism in America and its link to police brutality, and more specifically, police use of deadly force. Several studies have already found that race does play a part in who is targeted and killed in police shootings. For example, in a recent VICE News investigation about police shootings, it was found that “Black people were shot more often and at higher rates than people of any other race.” [1] Additionally, Edwards et. al performed a study regarding the effects of age, race-ethnicity, and sex on the risk of being killed by lethal force by law enforcement and similarly found that "Black men are about 2.5 times more likely to be killed by police over the life course than are white men" while "Black women are about 1.4 times more likely to be killed by police than are white women." [2] However, even with these studies and their disturbing conclusions, a poll done by AP-NORC in June 2020 found that still 39% of Americans think that police are not more likely to use lethal force against a black person than a white person. [3] Although this has decreased from an overwhelming 51% in June 2015, there is still a great deal of research that needs to be done in this area to provide more statistical evidence backing the relationship between racism and police use of deadly force. 
+|        On May 25, 2020, George Floyd was publicly suffocated to death by police officers in Minneapolis, Minnesota. This, along with the murder of Breonna Taylor by Louisville police, incited waves of protests against police brutality across the United States and increased the spread of Black Lives Matter content on social media. The recent boost in attention to the Black Lives Matter movement has once again brought to light the issue of racism in America and its link to police brutality, and more specifically, police use of deadly force. Several studies have already found that race does play a part in who is targeted and killed in police shootings. For example, in a recent VICE News investigation about police shootings, it was found that “Black people were shot more often and at higher rates than people of any other race.” [1] Additionally, Edwards et. al performed a study regarding the effects of age, race-ethnicity, and sex on the risk of being killed by lethal force by law enforcement and similarly found that "Black men are about 2.5 times more likely to be killed by police over the life course than are white men" while "Black women are about 1.4 times more likely to be killed by police than are white women." [2] However, even with these studies and their disturbing conclusions, a poll done by AP-NORC in June 2020 found that still 39% of Americans think that police are not more likely to use lethal force against a Black person than a White person. [3] Although this has decreased from an overwhelming 51% in June 2015, there is still a great deal of research that needs to be done in this area to provide more statistical evidence backing the relationship between racism and police use of deadly force. 
 
-|        As a result, I have decided to build off of VICE News’ study and investigate data on police shootings further to understand the roles that the race of both victim and officer, as well as other factors such as their genders, whether they are carrying a weapon, and the total number of victims in the crime, play in fatal versus non-fatal police shootings. Additionally, to account for the varying locations of the homicides, I will be using a dataset found on Kaggle detailing the gun provisions that are upheld by each state see how gun legislation affects lethal vs. non-lethal shootings. I will also add a predictor indicating whether the state in which the homicide occurred requires de-escalation training for police officers. Finally, I will explore how the ratio of black to white population in each location relates to police use of deadly force. This will allow me to better understand how racism has manifested itself in America’s police system and determine whether current attempts to prevent police use of lethal force are effective or not.
+|        As a result, I have decided to build off of VICE News’ study and investigate data on police shootings further to understand the roles that the race of both victim and officer, as well as other factors such as their genders, whether they are carrying a weapon, and the total number of victims in the crime, play in fatal versus non-fatal police shootings. Additionally, to account for the varying locations of the homicides, I will be using a dataset found on Kaggle detailing the gun provisions that are upheld by each state see how gun legislation affects lethal vs. non-lethal shootings. I will also add a predictor indicating whether the state in which the homicide occurred requires de-escalation training for police officers. Finally, I will explore how the ratio of Black to White population in each location relates to police use of deadly force. This will allow me to better understand how racism has manifested itself in America’s police system and determine whether current attempts to prevent police use of lethal force are effective or not.
 
 ### Data
 
-|        As a basis for this study, I will be using the same dataset that VICE News used. This dataset contains data on officer-involved shootings from 47 of the largest local police departments in America, and more specifically, “information on 4,117 incidents and 4,400 subjects [(victims)] over seven years.” [1] VICE News provides 34 variables in the dataset, including dates ranging from 2010 to 2016, city, subject race, subject gender, office race, officer gender, the type of weapon the subject was carrying, and whether the shooting was fatal or not. Race was broken up into 5 categories: White (non-Hispanic) (represented as W), Black (non-Hispanic) (B), Asian (A), Latino (L), and Unknown (U). Gender was broken up into 3 categories: Male (M), Female (F), and Unknown (U). Additionally, there were cases in which multiple victims and/or multiple officers were present in the shooting. Each of these scenarios was still represented within one row of the dataset, but semi-colons were present in the respective victim and officer columns, separating each individual's information from each other.
+|        As a basis for this study, I will be using the same dataset that VICE News used. This dataset contains data on officer-involved shootings from 47 of the largest local police departments in America, and more specifically, “information on 4,117 incidents and 4,400 subjects [(victims)] over seven years.” [1] VICE News provides 34 variables in the dataset, including dates ranging from 2010 to 2016, city, subject race, subject gender, office race, officer gender, the type of weapon the subject was carrying, and whether the shooting was fatal or not. Race was broken up into 5 categories: White (non-Hispanic) (represented as W), Black (non-Hispanic) (B), Asian (A), Latino (L), Other (O), and Unknown (U). Gender was broken up into 3 categories: Male (M), Female (F), and Unknown (U). Weapon type was broken up into 6 values: "gun", "knife", "replica", "other", "unknown", and "other". Additionally, there were cases in which multiple victims and/or multiple officers were present in the shooting. Each of these scenarios was still represented within one row of the dataset, but semi-colons were present in the respective victim and officer columns, separating each individual's information from each other.
 
 |       Additionally, to assess the effect of different types of legislation on fatal vs. non-fatal police shootings in various states, I will be using a dataset from Kaggle containing 135 variables that detail whether a certain gun provision is absent or present in a certain year and U.S. state for 133 different gun provisions. The years range from 1991 to 2017, and the gun provisions address 14 categories, some of which are dealer regulations, buyer regulations, prohibitions for high-risk gun possession, background checks, ammunition regulations, possession regulations, concealed carry permitting, assault weapons and large-capacity magazines, child access prevention, gun trafficking, and domestic violence. A 1 in the gun provision column represents a presence of the law, and a 0 indicates an absence. I also will add a column to this gun provision dataset indicating whether a state requires de-escalation training based off of information reported by APM Report in 2017, with a 1 meaning the state does require training and a 0 meaning the state does not.[4] 
 
 |       Finally, to examine city demographics as a predictor, I will be using population data from the 2013 American Community Survey that VICE News had already cleaned and standardized to the shootings dataset, meaning the city names can be matched up between the two datasets. VICE News most likely provided only 2013 census data because it is the average year of all the years represented in the shootings dataset. The census data includes 7 variables: the police department and the city it's located in, as well as the city's Black, Asian, Hispanic, White, and overall total population in 2013. 
 
+
+## II. Methods
+
+### Data Processing 
+
+|        Although the VICE News dataset was already relatively clean with regards to the victim's data, there was still quite a bit of cleaning that needed to be done for the race and gender data of the officers. To clean these columns, I replaced all values that were not "W", "B", "A", "O", or "U" in the race column with the most informed guess that I could make about what the values represented. For example, "A/PI" values were taken to represent Asian/Pacific Islander and thus were replaced with "A", and "A/W" or other values with a "/" in them were typically taken to represent multi-racial individuals and as a result were replaced with "O." Similar procedures were carried out in the gender column for officers for values that were not "M", "F", or "U".
+
+|        After this initial cleaning, I created new columns in the same dataset that represented whether any victims of race Black, White, Asian, or Other were present in the crime, respectively, and if any male or female victims were present in the crime, respectively. I also added new columns to represent the same information for officers (for each race and gender, whether each was present). I then made sure that each weapon type had its own column. All of these added columns had values of either 0 or 1, with 0 representing an absence of the variable and 1 a presence. Finally, I filtered out all rows that had only unknown values for the races or genders of the victims or officers, as these rows did not provide sufficient information for my analysis, and I selected only the columns I needed, such as whether the shooting was fatal or not, the genders and races of the victims and officers, and the weapons that the victims were carrying, if any. 
+
+In the VICE dataset, I will be filtering out the cases in which fatality is unknown, or the subject’s or officer’s race or gender is unknown from the final dataset. Additionally, there are 265 rows in which there were more than one victims of the shooting; in these cases, I will be separating each of these observations into multiple rows, with each row representing each individual victim and their associated information. I will carry out the same procedure in the cases in which there were more than one officers present at the shooting. Because there can be multiple victims and officers recorded for a shooting event, I will also be filtering out cases in which for a shooting event, the number of observations listed for victim or officer race differs from the number of observations listed for victim or officer gender, since I can not infer the missing values in either of these columns.
+
+|        After cleaning the data, I was left with a total of 2,084 observations. 	
+
 ### Exploratory Data Analysis
 
 ```{r}
 single_victims <- all %>% 
-  filter(!str_detect(SubjectRace, ";"))
+  filter(NumberOfSubjects <= 1)
 nrow(single_victims)
 
 mult_victims <- all %>% 
-  filter(str_detect(SubjectRace, ";"))
+  filter(NumberOfSubjects > 1)
 nrow(mult_victims)
 
 unknown <- all %>% 
   filter(str_detect(SubjectRace, "U"))
 ```
-|       Upon first glance, there appears to be 3906 incidents in which there was only one victim, and 210 with multiple victims. This means that there is one incident in which the victim race was marked as "NA." Additionally, 
+|       Upon first glance, there appears to be 1932 incidents in which there was only one victim, and 152 with multiple victims. This means that there is one incident in which the victim race was marked as "NA." Additionally, 
 
-```{r}
+```{r eval = F}
 single_victims <- all %>% 
   filter(!str_detect(SubjectRace, ";"))
 
@@ -232,13 +246,6 @@ ggplot(temp, aes(x=weapon, y=count, fill = Fatal)) +
 
 |        Finally, we can see that in cases of police shootings, victims have guns the most often in fatal cases and unknown weapons in non-fatal cases, whereas they have gun replicas the least often in both cases.
 
-## II. Methods
-
-### Data Processing 
-
-|        In the VICE dataset, I will be filtering out the cases in which fatality is unknown, or the subject’s or officer’s race or gender is unknown from the final dataset. Additionally, there are 265 rows in which there were more than one victims of the shooting; in these cases, I will be separating each of these observations into multiple rows, with each row representing each individual victim and their associated information. I will carry out the same procedure in the cases in which there were more than one officers present at the shooting. Because there can be multiple victims and officers recorded for a shooting event, I will also be filtering out cases in which for a shooting event, the number of observations listed for victim or officer race differs from the number of observations listed for victim or officer gender, since I can not infer the missing values in either of these columns.
-
-|        After cleaning the data, I was left with a total of 3,451 observations. I plotted some visualizations that depict the overall trends of the different predictors that I plan to use to answer my proposed research questions. 	
 
 ### Model 
 The predictors that I will use are subject race, subject gender, officer race, officer gender, and the type of weapon the subject was carrying. The response I will be modeling will be whether the shooting was fatal or not.
